# precision-ag

./: .gitignore  README.md  pyproject.toml
notebooks/: Soil_Water_Zones_Tutorial.ipynb  Vegetation_Health_Tutorial.ipynb
notebooks/output/: ndvi_S2B_MSIL2A_20251010T171139_R112_T14SPH_20251010T220405.tif  ndvi_S2B_MSIL2A_20251010T171139_R112_T14SQH_20251010T220405.tif  ndvi_S2C_MSIL2A_20251005T171211_R112_T14SPH_20251005T215214.tif  ndvi_S2C_MSIL2A_20251005T171211_R112_T14SQH_20251005T215214.tif  ndvi_S2C_MSIL2A_20251015T171321_R112_T14SPH_20251015T204816.tif  ndvi_S2C_MSIL2A_20251015T171321_R112_T14SQH_20251015T204816.tif
precision-ag/: additional_indices.py  ndvi_from_aoi.py  vegetation_indices.py  zone_analysis.py
