[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precision-ag"
version = "0.1.0"
description = "Comprehensive toolkit for precision agriculture analysis using satellite imagery and remote sensing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chris", email = "chris@example.com"}
]
keywords = ["agriculture", "precision-agriculture", "satellite", "ndvi", "remote-sensing", "stac", "sentinel-2", "landsat", "crop-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.5.0",
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0.0",
    "requests>=2.28.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[project.scripts]
ndvi-compute = "precision_ag.ndvi_from_aoi:main"

[project.urls]
Homepage = "https://github.com/chris/precision-ag"
"Bug Tracker" = "https://github.com/chris/precision-ag/issues"
Documentation = "https://github.com/chris/precision-ag#readme"
Repository = "https://github.com/chris/precision-ag"

[tool.setuptools]
packages = ["precision_ag"]

[tool.setuptools.package-dir]
"precision_ag" = "precision-ag"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

